# Uliege-INFO2050-Projet3

./: .gitignore  CMakeLists.txt  LICENSE
Code/: Comic.c  Comic.h  PNM.c  PNM.h  SeamCarving.c  SeamCarving.h  main.c  mainComic.c  mainSeamCarving.c  testComic.c
Code/pnm/: 01.pnm  02.pnm  03.pnm  04.pnm  05.pnm  06.pnm  07.pnm  08.pnm  09.pnm  10.pnm  11.pnm
Rapport/: main.aux  main.tex  preamble.tex  pseudo.tex  systeme.tex  titlepage.tex
